// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/InviteePermissionsDescription it should render correct description 1`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Upload, download, preview, share, edit, and delete"
    id="boxui.unifiedShare.editorLevelDescription"
  />
</small>
`;

exports[`features/unified-share-modal/InviteePermissionsDescription it should render correct description 2`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Manage security, upload, download, preview, share, edit, and delete"
    id="boxui.unifiedShare.coownerLevelDescription"
  />
</small>
`;

exports[`features/unified-share-modal/InviteePermissionsDescription it should render correct description 3`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Preview only"
    id="boxui.unifiedShare.previewerLevelDescription"
  />
</small>
`;

exports[`features/unified-share-modal/InviteePermissionsDescription it should render correct description 4`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Upload and preview"
    id="boxui.unifiedShare.previewerUploaderLevelDescription"
  />
</small>
`;

exports[`features/unified-share-modal/InviteePermissionsDescription it should render correct description 5`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Download, preview, and share"
    id="boxui.unifiedShare.viewerLevelDescription"
  />
</small>
`;

exports[`features/unified-share-modal/InviteePermissionsDescription it should render correct description 6`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Upload, download, preview, share, and edit"
    id="boxui.unifiedShare.viewerUploaderLevelDescription"
  />
</small>
`;

exports[`features/unified-share-modal/InviteePermissionsDescription it should render correct description 7`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Upload only"
    id="boxui.unifiedShare.uploaderLevelDescription"
  />
</small>
`;
